Bug 514562 - VLC is unable to open the MRL. Check the log for details.
Summary: VLC is unable to open the MRL. Check the log for details.
Status: RESOLVED FIXED
Alias: None
Product: kasts
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: bart
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-01-14 00:00 UTC by cixehay843
Modified: 2026-01-14 20:59 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description cixehay843 2026-01-14 00:00:40 UTC
***
If you're not sure this is actually a bug, instead post about it at https://discuss.kde.org

If you're reporting a crash, attach a backtrace with debug symbols; see https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports

Please remove this comment after reading and before submitting - thanks!
***

SUMMARY
The podcast failed playing

STEPS TO REPRODUCE
1. Subscribe to https://stratechery.passport.online/feed/podcast
2. Listen to the first episode on stream

OBSERVED RESULT
Invalid media file

Also from the log:
[0000561e1d840d10] main input error: Your input can't be opened
[0000561e1d840d10] main input error: VLC is unable to open the MRL 'https://stratechery.passport.online/assets/2026-1-5 with chapters.mp3'. Check the log for details.

EXPECTED RESULT
It should be able to play the podcast in stream format

SOFTWARE/OS VERSIONS
KDE Plasma Version: 6.5.4
KDE Frameworks Version: 6.22.0
Qt Version: 6.10.1

ADDITIONAL INFORMATION
Then I tried the following in VLC
1. Play the original URL
cvlc 'https://stratechery.passport.online/assets/2026-1-5 with chapters.mp3'
VLC media player 3.0.21 Vetinari (revision 3.0.21-0-gdd8bfdbabe8)
[000055a88c745890] dummy interface: using the dummy interface module...
[00007fc8bc000d00] main input error: Your input can't be opened
[00007fc8bc000d00] main input error: VLC is unable to open the MRL 'https://stratechery.passport.online/assets/2026-1-5 with chapters.mp3'. Check the log for details.
2. Play the original URL with space replaced
cvlc 'https://stratechery.passport.online/assets/2026-1-5%20with%20chapters.mp3'
VLC media player 3.0.21 Vetinari (revision 3.0.21-0-gdd8bfdbabe8)
[0000557d5e1c9890] dummy interface: using the dummy interface module...

Can kast handle the empty space so that vlc can play the stream? Thanks a lot
Comment 1 Bug Janitor Service 2026-01-14 18:21:29 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/kasts/-/merge_requests/301
Comment 2 bart 2026-01-14 18:26:04 UTC
Git commit c02b6a7ddfd467841e01221adfe1bba67156f04d by Bart De Vries.
Committed on 14/01/2026 at 18:18.
Pushed by bdevries into branch 'master'.

Encode spaces in streaming urls handed over to vlc

For some reason vlc does not handle spaces in urls (while other backends
are fine with this).  So let's address this special case by replacing
spaces with "%20".

M  +10   -1    src/kmediasession/mediabackends/vlcmediabackend.cpp

https://invent.kde.org/multimedia/kasts/-/commit/c02b6a7ddfd467841e01221adfe1bba67156f04d
Comment 3 bart 2026-01-14 20:59:05 UTC
Git commit b3ed00b1a188f162ec8eeefb2b28badc36e19c02 by Bart De Vries.
Committed on 14/01/2026 at 20:58.
Pushed by bdevries into branch 'release/25.12'.

Encode spaces in streaming urls handed over to vlc

For some reason vlc does not handle spaces in urls (while other backends
are fine with this).  So let's address this special case by replacing
spaces with "%20".

M  +10   -1    src/kmediasession/mediabackends/vlcmediabackend.cpp

https://invent.kde.org/multimedia/kasts/-/commit/b3ed00b1a188f162ec8eeefb2b28badc36e19c02
Comment 4 bart 2026-01-14 20:59:59 UTC
Should be fixed in the next release. Thanks for the bug report.