Encode spaces in streaming urls handed over to vlc

For some reason vlc does not handle spaces in urls (while other backends
are fine with this).  So let's address this special case by replacing
spaces with "%20".

BUG: 514562